[project]
name = "llm-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "httpx[http2]>=0.28.0",
    "langchain-google-genai>=2.1.0",
    "langgraph>=1.1.6",
    "langmem>=0.0.30",
    "openai>=2.30.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.2.2",
    "slowapi>=0.1.9",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "uvicorn>=0.43.0",
]
